additional train dataset

--- a/dataset22_preprocessing.ipynb
+++ b/dataset22_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "dev_22_gold = pd.read_csv(DEV_22_GOLD_PATH, header=None, usecols=[2], names=['emotion'], sep='\\t')\n",
     "dev_22_df = dev_22_df.merge(dev_22_gold, left_index=True, right_index=True, how='outer')\n",
     "\n",
-    "essay_22_df = pd.concat([train_22_df[['message_id', 'essay', 'emotion']], dev_22_df[['message_id', 'essay', 'emotion']]])\n",
+    "essay_22_df = pd.concat([train_22_df[['essay', 'emotion']], dev_22_df[['essay', 'emotion']]])\n",
     "\n",
     "\n",
     "DATA2023_PATH = \"./datasets/train_essay_level_preproc.tsv\"\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>message_id</th>\n",
        "      <th>essay</th>\n",
        "      <th>emotion</th>\n",
        "    </tr>\n",
@@ -59,31 +58,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>R_1hGrPtWM4SumG0U_1</td>\n",
        "      <td>it is really diheartening to read about these ...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>R_1hGrPtWM4SumG0U_2</td>\n",
        "      <td>the phone lines from the suicide prevention li...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>R_1hGrPtWM4SumG0U_3</td>\n",
        "      <td>no matter what your heritage, you should be ab...</td>\n",
        "      <td>neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>R_1hGrPtWM4SumG0U_4</td>\n",
        "      <td>it is frightening to learn about all these sha...</td>\n",
        "      <td>fear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>R_1hGrPtWM4SumG0U_5</td>\n",
        "      <td>the eldest generation of russians aren't being...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
@@ -91,74 +85,55 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>265</th>\n",
-       "      <td>R_r3CoQ7YjIwxVvJT_1</td>\n",
        "      <td>While I feel bad for the arrest charges, I don...</td>\n",
        "      <td>anger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>266</th>\n",
-       "      <td>R_r3CoQ7YjIwxVvJT_2</td>\n",
        "      <td>This is such a tragedy.  All I can think about...</td>\n",
        "      <td>fear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>267</th>\n",
-       "      <td>R_r3CoQ7YjIwxVvJT_3</td>\n",
        "      <td>I'm still on the fence regarding climate chang...</td>\n",
        "      <td>neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>268</th>\n",
-       "      <td>R_r3CoQ7YjIwxVvJT_4</td>\n",
        "      <td>I can understand why the Jewish community woul...</td>\n",
        "      <td>joy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>269</th>\n",
-       "      <td>R_r3CoQ7YjIwxVvJT_5</td>\n",
        "      <td>As a woman, it is very discouraging to see tha...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2130 rows × 3 columns</p>\n",
+       "<p>2130 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              message_id                                              essay  \\\n",
-       "0    R_1hGrPtWM4SumG0U_1  it is really diheartening to read about these ...   \n",
-       "1    R_1hGrPtWM4SumG0U_2  the phone lines from the suicide prevention li...   \n",
-       "2    R_1hGrPtWM4SumG0U_3  no matter what your heritage, you should be ab...   \n",
-       "3    R_1hGrPtWM4SumG0U_4  it is frightening to learn about all these sha...   \n",
-       "4    R_1hGrPtWM4SumG0U_5  the eldest generation of russians aren't being...   \n",
-       "..                   ...                                                ...   \n",
-       "265  R_r3CoQ7YjIwxVvJT_1  While I feel bad for the arrest charges, I don...   \n",
-       "266  R_r3CoQ7YjIwxVvJT_2  This is such a tragedy.  All I can think about...   \n",
-       "267  R_r3CoQ7YjIwxVvJT_3  I'm still on the fence regarding climate chang...   \n",
-       "268  R_r3CoQ7YjIwxVvJT_4  I can understand why the Jewish community woul...   \n",
-       "269  R_r3CoQ7YjIwxVvJT_5  As a woman, it is very discouraging to see tha...   \n",
+       "                                                 essay  emotion\n",
+       "0    it is really diheartening to read about these ...  sadness\n",
+       "1    the phone lines from the suicide prevention li...  sadness\n",
+       "2    no matter what your heritage, you should be ab...  neutral\n",
+       "3    it is frightening to learn about all these sha...     fear\n",
+       "4    the eldest generation of russians aren't being...  sadness\n",
+       "..                                                 ...      ...\n",
+       "265  While I feel bad for the arrest charges, I don...    anger\n",
+       "266  This is such a tragedy.  All I can think about...     fear\n",
+       "267  I'm still on the fence regarding climate chang...  neutral\n",
+       "268  I can understand why the Jewish community woul...      joy\n",
+       "269  As a woman, it is very discouraging to see tha...  sadness\n",
        "\n",
-       "     emotion  \n",
-       "0    sadness  \n",
-       "1    sadness  \n",
-       "2    neutral  \n",
-       "3       fear  \n",
-       "4    sadness  \n",
-       "..       ...  \n",
-       "265    anger  \n",
-       "266     fear  \n",
-       "267  neutral  \n",
-       "268      joy  \n",
-       "269  sadness  \n",
-       "\n",
-       "[2130 rows x 3 columns]"
+       "[2130 rows x 2 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,35 +144,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sadness     647\n",
-       "anger       349\n",
-       "neutral     275\n",
-       "fear        194\n",
-       "surprise    164\n",
-       "disgust     149\n",
-       "joy          82\n",
+       "sadness     745\n",
+       "anger       425\n",
+       "neutral     300\n",
+       "fear        225\n",
+       "surprise    178\n",
+       "disgust     161\n",
+       "joy          96\n",
        "Name: emotion, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class_count = train2021_df['emotion'].value_counts()\n",
+    "class_count = essay_22_df['emotion'].value_counts()\n",
     "class_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -258,32 +233,32 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>49</th>\n",
-       "      <td>Her eyes are so beautiful. Very striking. You ...</td>\n",
+       "      <td>Ill be honest this speech did not inspire me. ...</td>\n",
        "      <td>hope</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
-       "      <td>It’s a fact but it’s not the case at this time...</td>\n",
+       "      <td>I played this in my high school engineering (P...</td>\n",
        "      <td>hope</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>51</th>\n",
-       "      <td>Blue Lives Matter. Black Lives Matter. Hispani...</td>\n",
+       "      <td>It really sucks at least in america you have f...</td>\n",
        "      <td>hope</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52</th>\n",
-       "      <td>I dont understand why it is up to anyone else ...</td>\n",
+       "      <td>Everyone hating on the girl who disagrees with...</td>\n",
        "      <td>hope</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
-       "      <td>Being pro-life and pro-sterilization is not hy...</td>\n",
+       "      <td>I'm 14 and in our school we have a STEM progra...</td>\n",
        "      <td>hope</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2292 rows × 2 columns</p>\n",
+       "<p>2184 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -294,16 +269,16 @@
        "3   it is frightening to learn about all these sha...     fear\n",
        "4   the eldest generation of russians aren't being...  sadness\n",
        "..                                                ...      ...\n",
-       "49  Her eyes are so beautiful. Very striking. You ...     hope\n",
-       "50  It’s a fact but it’s not the case at this time...     hope\n",
-       "51  Blue Lives Matter. Black Lives Matter. Hispani...     hope\n",
-       "52  I dont understand why it is up to anyone else ...     hope\n",
-       "53  Being pro-life and pro-sterilization is not hy...     hope\n",
+       "49  Ill be honest this speech did not inspire me. ...     hope\n",
+       "50  I played this in my high school engineering (P...     hope\n",
+       "51  It really sucks at least in america you have f...     hope\n",
+       "52  Everyone hating on the girl who disagrees with...     hope\n",
+       "53  I'm 14 and in our school we have a STEM progra...     hope\n",
        "\n",
-       "[2292 rows x 2 columns]"
+       "[2184 rows x 2 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "essay_22_df['essay'] = essay_22_df['essay'].replace(\"’\", \"'\")\n",
+    "essay_22_df['essay'] = essay_22_df['essay'].replace(\"‘\", \"'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -349,28 +334,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>i just read an article about a father who kill...</td>\n",
+       "      <td>It's very unfortunate for both the wildlife an...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>It’s a shame that Nevada is going through this...</td>\n",
+       "      <td>I feel so bad for Val, he is battling this dis...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>You have to read this.  It's unbelievable that...</td>\n",
-       "      <td>anger</td>\n",
+       "      <td>I believe protecting nature is extremely impor...</td>\n",
+       "      <td>neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>I can understand being absent minded and conce...</td>\n",
+       "      <td>A mother pushed a stroller onto an elevator th...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Did you hear about what had happened to the ki...</td>\n",
-       "      <td>sadness</td>\n",
+       "      <td>I just read an article about a democrat runnin...</td>\n",
+       "      <td>anger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -378,53 +363,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2287</th>\n",
-       "      <td>SO I just read an article about goldfish. You ...</td>\n",
-       "      <td>fear</td>\n",
+       "      <th>2179</th>\n",
+       "      <td>It's interesting that so many people would hav...</td>\n",
+       "      <td>neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2288</th>\n",
-       "      <td>It aggravates me that in our modern society le...</td>\n",
+       "      <th>2180</th>\n",
+       "      <td>If you're here illegally, you shouldn't be her...</td>\n",
        "      <td>anger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2289</th>\n",
-       "      <td>I feel so bad for that innocent customer. This...</td>\n",
+       "      <th>2181</th>\n",
+       "      <td>If you are wearing contacts for your vision to...</td>\n",
        "      <td>fear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2290</th>\n",
-       "      <td>It’s racist to say black lives matter it’s cor...</td>\n",
-       "      <td>hope</td>\n",
+       "      <th>2182</th>\n",
+       "      <td>Thomas referred the case to the full court, an...</td>\n",
+       "      <td>neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2291</th>\n",
-       "      <td>Wow that dude has a lot of money! More power t...</td>\n",
-       "      <td>joy</td>\n",
+       "      <th>2183</th>\n",
+       "      <td>People are still talking about Hillary Clinton...</td>\n",
+       "      <td>anger</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2292 rows × 2 columns</p>\n",
+       "<p>2184 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                  essay  emotion\n",
-       "0     i just read an article about a father who kill...  sadness\n",
-       "1     It’s a shame that Nevada is going through this...  sadness\n",
-       "2     You have to read this.  It's unbelievable that...    anger\n",
-       "3     I can understand being absent minded and conce...  sadness\n",
-       "4     Did you hear about what had happened to the ki...  sadness\n",
+       "0     It's very unfortunate for both the wildlife an...  sadness\n",
+       "1     I feel so bad for Val, he is battling this dis...  sadness\n",
+       "2     I believe protecting nature is extremely impor...  neutral\n",
+       "3     A mother pushed a stroller onto an elevator th...  sadness\n",
+       "4     I just read an article about a democrat runnin...    anger\n",
        "...                                                 ...      ...\n",
-       "2287  SO I just read an article about goldfish. You ...     fear\n",
-       "2288  It aggravates me that in our modern society le...    anger\n",
-       "2289  I feel so bad for that innocent customer. This...     fear\n",
-       "2290  It’s racist to say black lives matter it’s cor...     hope\n",
-       "2291  Wow that dude has a lot of money! More power t...      joy\n",
+       "2179  It's interesting that so many people would hav...  neutral\n",
+       "2180  If you're here illegally, you shouldn't be her...    anger\n",
+       "2181  If you are wearing contacts for your vision to...     fear\n",
+       "2182  Thomas referred the case to the full court, an...  neutral\n",
+       "2183  People are still talking about Hillary Clinton...    anger\n",
        "\n",
-       "[2292 rows x 2 columns]"
+       "[2184 rows x 2 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
