preprocessing bug fix

--- a/hope_dataset/dataset_integration.ipynb
+++ b/hope_dataset/dataset_integration.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# TODO: fare il merge per bene\n",
     "TRAIN_PATH = './dataset/WASSA22_essay_level_train.tsv'\n",
     "DEV_PATH = './dataset/WASSA22_essay_level_dev.tsv'\n",
     "\n",
