--- a/prova.ipynb
+++ b/prova.ipynb
@@ -65,6 +65,381 @@
     "labels(year=23)\n",
     "labels(year=22)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['e,', 'ciao', '.']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'e, ciao .'.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = 'It is sad that children are still dying from measles.   According to UNICEF, there is a simple vaccine that can be given, which would stop children from being affected.  It affects most children in poor countries, which is very sad.  The vaccine isn’t that expensive and you would think that the leaders of all countries would get together and do something about this problem.  It is not just up to the USA to stand up and do something.  These other countries (even though they are poor) need to get more educated and help protect their own children and citizens in their own country.  It is sad that children and others have to die because we can’t coordinate with each other, to get the vaccines to those who need it most.  I feel sorry for those families who have suffered the loss of a child due '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split = text.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from textblob import TextBlob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blob = TextBlob(text)\n",
+    "words = [w.lemmatize() for w in blob.words]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TextBlob(\"It is sad that children are still dying from measles.   According to UNICEF, there is a simple vaccine that can be given, which would stop children from being affected.  It affects most children in poor countries, which is very sad.  The vaccine isn’t that expensive and you would think that the leaders of all countries would get together and do something about this problem.  It is not just up to the USA to stand up and do something.  These other countries (even though they are poor) need to get more educated and help protect their own children and citizens in their own country.  It is sad that children and others have to die because we can’t coordinate with each other, to get the vaccines to those who need it most.  I feel sorry for those families who have suffered the loss of a child due \")"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['It',\n",
+       " 'is',\n",
+       " 'sad',\n",
+       " 'that',\n",
+       " 'child',\n",
+       " 'are',\n",
+       " 'still',\n",
+       " 'dying',\n",
+       " 'from',\n",
+       " 'measles',\n",
+       " 'According',\n",
+       " 'to',\n",
+       " 'UNICEF',\n",
+       " 'there',\n",
+       " 'is',\n",
+       " 'a',\n",
+       " 'simple',\n",
+       " 'vaccine',\n",
+       " 'that',\n",
+       " 'can',\n",
+       " 'be',\n",
+       " 'given',\n",
+       " 'which',\n",
+       " 'would',\n",
+       " 'stop',\n",
+       " 'child',\n",
+       " 'from',\n",
+       " 'being',\n",
+       " 'affected',\n",
+       " 'It',\n",
+       " 'affect',\n",
+       " 'most',\n",
+       " 'child',\n",
+       " 'in',\n",
+       " 'poor',\n",
+       " 'country',\n",
+       " 'which',\n",
+       " 'is',\n",
+       " 'very',\n",
+       " 'sad',\n",
+       " 'The',\n",
+       " 'vaccine',\n",
+       " 'isn',\n",
+       " '’',\n",
+       " 't',\n",
+       " 'that',\n",
+       " 'expensive',\n",
+       " 'and',\n",
+       " 'you',\n",
+       " 'would',\n",
+       " 'think',\n",
+       " 'that',\n",
+       " 'the',\n",
+       " 'leader',\n",
+       " 'of',\n",
+       " 'all',\n",
+       " 'country',\n",
+       " 'would',\n",
+       " 'get',\n",
+       " 'together',\n",
+       " 'and',\n",
+       " 'do',\n",
+       " 'something',\n",
+       " 'about',\n",
+       " 'this',\n",
+       " 'problem',\n",
+       " 'It',\n",
+       " 'is',\n",
+       " 'not',\n",
+       " 'just',\n",
+       " 'up',\n",
+       " 'to',\n",
+       " 'the',\n",
+       " 'USA',\n",
+       " 'to',\n",
+       " 'stand',\n",
+       " 'up',\n",
+       " 'and',\n",
+       " 'do',\n",
+       " 'something',\n",
+       " 'These',\n",
+       " 'other',\n",
+       " 'country',\n",
+       " 'even',\n",
+       " 'though',\n",
+       " 'they',\n",
+       " 'are',\n",
+       " 'poor',\n",
+       " 'need',\n",
+       " 'to',\n",
+       " 'get',\n",
+       " 'more',\n",
+       " 'educated',\n",
+       " 'and',\n",
+       " 'help',\n",
+       " 'protect',\n",
+       " 'their',\n",
+       " 'own',\n",
+       " 'child',\n",
+       " 'and',\n",
+       " 'citizen',\n",
+       " 'in',\n",
+       " 'their',\n",
+       " 'own',\n",
+       " 'country',\n",
+       " 'It',\n",
+       " 'is',\n",
+       " 'sad',\n",
+       " 'that',\n",
+       " 'child',\n",
+       " 'and',\n",
+       " 'others',\n",
+       " 'have',\n",
+       " 'to',\n",
+       " 'die',\n",
+       " 'because',\n",
+       " 'we',\n",
+       " 'can',\n",
+       " '’',\n",
+       " 't',\n",
+       " 'coordinate',\n",
+       " 'with',\n",
+       " 'each',\n",
+       " 'other',\n",
+       " 'to',\n",
+       " 'get',\n",
+       " 'the',\n",
+       " 'vaccine',\n",
+       " 'to',\n",
+       " 'those',\n",
+       " 'who',\n",
+       " 'need',\n",
+       " 'it',\n",
+       " 'most',\n",
+       " 'I',\n",
+       " 'feel',\n",
+       " 'sorry',\n",
+       " 'for',\n",
+       " 'those',\n",
+       " 'family',\n",
+       " 'who',\n",
+       " 'have',\n",
+       " 'suffered',\n",
+       " 'the',\n",
+       " 'loss',\n",
+       " 'of',\n",
+       " 'a',\n",
+       " 'child',\n",
+       " 'due']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "child children\n",
+      "measles measles.\n",
+      "UNICEF UNICEF,\n",
+      "given given,\n",
+      "child children\n",
+      "affected affected.\n",
+      "affect affects\n",
+      "child children\n",
+      "country countries,\n",
+      "sad sad.\n",
+      "isn isn’t\n",
+      "’ that\n",
+      "t expensive\n",
+      "that and\n",
+      "expensive you\n",
+      "and would\n",
+      "you think\n",
+      "would that\n",
+      "think the\n",
+      "that leaders\n",
+      "the of\n",
+      "leader all\n",
+      "of countries\n",
+      "all would\n",
+      "country get\n",
+      "would together\n",
+      "get and\n",
+      "together do\n",
+      "and something\n",
+      "do about\n",
+      "something this\n",
+      "about problem.\n",
+      "this It\n",
+      "problem is\n",
+      "It not\n",
+      "is just\n",
+      "not up\n",
+      "just to\n",
+      "up the\n",
+      "to USA\n",
+      "the to\n",
+      "USA stand\n",
+      "to up\n",
+      "stand and\n",
+      "up do\n",
+      "and something.\n",
+      "do These\n",
+      "something other\n",
+      "These countries\n",
+      "other (even\n",
+      "country though\n",
+      "even they\n",
+      "though are\n",
+      "they poor)\n",
+      "are need\n",
+      "poor to\n",
+      "need get\n",
+      "to more\n",
+      "get educated\n",
+      "more and\n",
+      "educated help\n",
+      "and protect\n",
+      "help their\n",
+      "protect own\n",
+      "their children\n",
+      "own and\n",
+      "child citizens\n",
+      "and in\n",
+      "citizen their\n",
+      "in own\n",
+      "their country.\n",
+      "own It\n",
+      "country is\n",
+      "It sad\n",
+      "is that\n",
+      "sad children\n",
+      "that and\n",
+      "child others\n",
+      "and have\n",
+      "others to\n",
+      "have die\n",
+      "to because\n",
+      "die we\n",
+      "because can’t\n",
+      "we coordinate\n",
+      "can with\n",
+      "’ each\n",
+      "t other,\n",
+      "coordinate to\n",
+      "with get\n",
+      "each the\n",
+      "other vaccines\n",
+      "get those\n",
+      "the who\n",
+      "vaccine need\n",
+      "to it\n",
+      "those most.\n",
+      "who I\n",
+      "need feel\n",
+      "it sorry\n",
+      "most for\n",
+      "I those\n",
+      "feel families\n",
+      "sorry who\n",
+      "for have\n",
+      "those suffered\n",
+      "family the\n",
+      "who loss\n",
+      "have of\n",
+      "suffered a\n",
+      "the child\n",
+      "loss due\n"
+     ]
+    }
+   ],
+   "source": [
+    "for w, s in zip(words, split):\n",
+    "    if w != s:\n",
+    "        print(w, s)"
+   ]
   }
  ],
  "metadata": {
