dataset preproc: prompt column, mc, WASSA23 data

--- a/prova.ipynb
+++ b/prova.ipynb
@@ -33,7 +33,7 @@
     "    dev_df = pd.read_csv(dev_path, sep='\\t')\n",
     "    return train_df, internal_train_df, internal_val_df, dev_df\n",
     "\n",
-    "def low_labels(dataset):\n",
+    "def lower_case_labels(dataset):\n",
     "    for idx, row in dataset.iterrows():\n",
     "        row['emotion'] = row['emotion'].lower()\n",
     "    return dataset"
