mc in BERT and ROBERTA nb

--- a/EMO/ROBERTA.ipynb
+++ b/EMO/ROBERTA.ipynb
@@ -958,9 +958,9 @@
         "    'val_batch_size': 8,\n",
         "    'learning_rate': 5e-5,\n",
         "    'weight_decay': 0,\n",
-        "    'epochs': 10,\n",
+        "    'epochs': 30,\n",
         "    'seed': 42,\n",
-        "    'patience': 10,\n",
+        "    'patience': 5,\n",
         "    'early_stopping_threshold': 0,\n",
         "    'weighted_loss': True\n",
         "}\n",
@@ -1260,7 +1260,8 @@
         "                                                     problem_type = \"multi_label_classification\",\n",
         "                                                     num_labels=NUM_LABELS,\n",
         "                                                     classifier_dropout=0.3#,\n",
-        "                                                     #last_cls = 4\n",
+        "                                                     #last_cls = 4,\n",
+        "                                                     #mean_last_cls = True\n",
         "                                                     )"
       ]
     },
@@ -1301,21 +1302,39 @@
       "outputs": [],
       "source": [
         "train_set = WASSADataset(tokenizer=tokenizer,\n",
-        "                       essay=train_df.essay,\n",
-        "                       essay_id = train_df.essay_id,\n",
-        "                       targets=y_train\n",
-        "                      )\n",
+        "                    essay=train_df.essay,\n",
+        "                    essay_id = train_df.essay_id,\n",
+        "                    targets=y_train\n",
+        "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
+        "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
+        "                    #global_features = features_val,\n",
+        "                    #local_emotions = True,\n",
+        "                    #local_empathy = True,\n",
+        "                    #local_distress = True\n",
+        "                )\n",
         "\n",
         "val_set = WASSADataset(tokenizer=tokenizer,\n",
-        "                     essay=val_df.essay,\n",
-        "                     essay_id = val_df.essay_id,\n",
-        "                     targets=y_val\n",
-        "                    )\n",
+        "                    essay=val_df.essay,\n",
+        "                    essay_id = val_df.essay_id,\n",
+        "                    targets=y_val\n",
+        "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
+        "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
+        "                    #global_features = features_val,\n",
+        "                    #local_emotions = True,\n",
+        "                    #local_empathy = True,\n",
+        "                    #local_distress = True\n",
+        "                )\n",
         "dev_set = WASSADataset(tokenizer=tokenizer,\n",
-        "                     essay=dev_df.essay,\n",
-        "                     essay_id = dev_df.essay_id,\n",
-        "                     targets=y_dev\n",
-        "                    )"
+        "                    essay=dev_df.essay,\n",
+        "                    essay_id = dev_df.essay_id,\n",
+        "                    targets=y_dev\n",
+        "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
+        "                    #EMP_lexicon=EMP_lexicon_train_dict,\n",
+        "                    #global_features = features_val,\n",
+        "                    #local_emotions = True,\n",
+        "                    #local_empathy = True,\n",
+        "                    #local_distress = True\n",
+        "                )"
       ]
     },
     {
@@ -1351,8 +1370,8 @@
         "    num_train_epochs=model_config['epochs'],\n",
         "    evaluation_strategy=\"steps\",\n",
         "    save_strategy=\"steps\",\n",
-        "    eval_steps = 300,\n",
-        "    save_steps = 300,\n",
+        "    eval_steps = 150,\n",
+        "    save_steps = 150,\n",
         "    learning_rate=model_config['learning_rate'],\n",
         "    weight_decay=model_config['weight_decay'],\n",
         "    load_best_model_at_end=True,\n",
@@ -1952,46 +1971,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "execution": {
-          "iopub.status.busy": "2023-07-11T19:20:18.394734Z",
-          "iopub.status.idle": "2023-07-11T19:20:18.395569Z",
-          "shell.execute_reply": "2023-07-11T19:20:18.395348Z",
-          "shell.execute_reply.started": "2023-07-11T19:20:18.395308Z"
-        },
-        "id": "TJHxnmO7v8SJ",
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "fig_name = \"model_graph\"\n",
-        "plot_model_graph(model=model,\n",
-        "                input_data=tokenizer(\"Hello world!\", return_tensors=\"pt\"),\n",
-        "                path=f\"{path_tosave}/{fig_name}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "execution": {
-          "iopub.status.busy": "2023-07-11T19:20:18.401230Z",
-          "iopub.status.idle": "2023-07-11T19:20:18.401577Z",
-          "shell.execute_reply": "2023-07-11T19:20:18.401425Z",
-          "shell.execute_reply.started": "2023-07-11T19:20:18.401408Z"
-        },
-        "id": "K33Q2SfFwR30",
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "fig_name = f\"{model_config['model_id']}_fig_name\"\n",
-        "print_model_summary(model=model, path=f\"{path_tosave}/{fig_name}.txt\")"
-      ]
-    },
-    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {
@@ -2022,7 +2001,7 @@
         "!mv $best_model_path /content/$path_tosave\n",
         "\n",
         "# move the results to personal drive\n",
-        "!mv $path_tosave /content/drive/MyDrive/hlt"
+        "!mv /content/$path_tosave /content/drive/MyDrive/hlt"
       ]
     },
     {
@@ -2097,7 +2076,7 @@
         }
       ],
       "source": [
-        "load_checkpoint_and_compute_metrics(\"/content/bert-base-caseda/checkpoint-1200\")"
+        "\"\"\"load_checkpoint_and_compute_metrics(\"/content/bert-base-caseda/checkpoint-1200\")\"\"\""
       ]
     },
     {
@@ -2115,41 +2094,13 @@
       },
       "outputs": [],
       "source": [
-        "MODEL_PATH = \"/content/drive/MyDrive/hlt/best-roberta"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "xpg9CfGIhZ5E"
-      },
-      "outputs": [],
-      "source": [
-        "NUM_LABELS=8"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "execution": {
-          "iopub.status.busy": "2023-07-11T19:20:18.410255Z",
-          "iopub.status.idle": "2023-07-11T19:20:18.411058Z",
-          "shell.execute_reply": "2023-07-11T19:20:18.410815Z",
-          "shell.execute_reply.started": "2023-07-11T19:20:18.410790Z"
-        },
-        "id": "hWFw9keWvCy3",
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
+        "\"\"\"MODEL_PATH = \"/content/drive/MyDrive/hlt/best-roberta\n",
         "tokenizer = AutoTokenizer.from_pretrained(MODEL_PATH, truncation=True)\n",
         "model = AutoModelForSequenceClassification.from_pretrained(\n",
         "    MODEL_PATH,\n",
         "    num_labels=NUM_LABELS,\n",
         "    ignore_mismatched_sizes=True,\n",
-        "    problem_type=\"multi_label_classification\")"
+        "    problem_type=\"multi_label_classification\")\"\"\""
       ]
     }
   ],
