--- a/EMO/ROBERTA.ipynb
+++ b/EMO/ROBERTA.ipynb
@@ -1303,6 +1303,8 @@
       "source": [
         "train_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=train_df.essay,\n",
+        "                    #prompt=train_df.prompt,\n",
+        "                    #sep=True,\n",
         "                    essay_id = train_df.essay_id,\n",
         "                    targets=y_train\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
@@ -1315,6 +1317,8 @@
         "\n",
         "val_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=val_df.essay,\n",
+        "                    #prompt=val_df.prompt,\n",
+        "                    #sep=True,\n",
         "                    essay_id = val_df.essay_id,\n",
         "                    targets=y_val\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
@@ -1326,6 +1330,8 @@
         "                )\n",
         "dev_set = WASSADataset(tokenizer=tokenizer,\n",
         "                    essay=dev_df.essay,\n",
+        "                    #prompt=dev_df.prompt,\n",
+        "                    #sep=True,\n",
         "                    essay_id = dev_df.essay_id,\n",
         "                    targets=y_dev\n",
         "                    #EMO_lexicon=EMO_lexicon_train_dict,\n",
