--- a/EMO/ROBERTA.ipynb
+++ b/EMO/ROBERTA.ipynb
@@ -1932,6 +1932,18 @@
         "#TODO write predictions con TASK come stringa\n",
         "write_EMO_predictions(predicted_emotions, path_predictions)\n",
         "challenge_metrics = compute_EMO_metrics(golds=gold_emotions, predictions=predicted_emotions)\n",
+        "\n",
+        "\"\"\"max_f1 = 0\n",
+        "for i, value in enumerate([log.get('eval_macro_f1') for log in train_logs if log.get('eval_macro_f1') is not None]):\n",
+        "    if value > max_f1:\n",
+        "        max_f1 = value\n",
+        "        max_f1_epoch = eval_epochs[i]\n",
+        "best_train_loss = train_loss_values[max_f1_epoch-1]\n",
+        "best_eval_loss = eval_loss_values[max_f1_epoch-1]\n",
+        "\n",
+        "challenge_metrics['best_train_loss'] = best_train_loss\n",
+        "challenge_metrics['best_eval_loss'] = best_eval_loss  \"\"\"  \n",
+        "\n",
         "write_dict_to_json(challenge_metrics, path_metrics)\n",
         "\n",
         "challenge_metrics"
